# rust-api

./: .env  Cargo.toml  README.md
migrations/2021-08-05-051509_create_users/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
