[package]
name = "rust-api"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
anyhow = "1.0.42"
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.22.2", features = ["bundled"] }
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.66"
